test/org/midica/testfiles/failing/eff-func-cont-rpn.midica
INCLUDE inc/instruments.midica


0: bend_range.line(1,12)
